force-app/main/default/objects/ClientCredentials_Metadata__mdt/ClientCredentials_Metadata__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type uses to custom authentication providers for client credentials by OAuth.</description>
    <label>ClientCredentials_Metadata</label>
</CustomObject>