force-app/main/default/objects/ClientCredentials_Metadata__mdt/fields/Access_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_URL__c</fullName>
    <label>Access Token URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>