force-app/main/default/objects/ClientCredentials_Metadata__mdt/fields/Auth_Provider__c.field-meta.xml
<CustomField>
    <fullName>Auth_Provider__c</fullName>
    <label>Auth Provider</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>