force-app/main/default/objects/ClientCredentials_Metadata__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <label>Client_ID</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>